tests/tests/ui/invalid_signed_with_unsigned_storage.stderr
error: Invalid column type 'unsignedinteger(4)' for field 'price: i32'

       = note: Signed integer types are not compatible with unsigned storage
       = help: Valid storage types for i32: integer(4), integer(8)
  --> tests/ui/invalid_signed_with_unsigned_storage.rs:10:5
   |
10 |     #[column(type = unsignedinteger(4))]
   |     ^
